# chime

./: .clang-format  .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.org  citation.cff  constants.c  constants.h  integrand.c  m1_input.ini  main.c  main.py  operator_id.c  operator_id.h  operator_r_sq.c  operator_r_sq.h  project.mk  rc2.input  rsq_input.ini  tags  tdho.c  tdho.h  utility.c  utility.h  wavefunction.c  wavefunction.h
input/: gt_input.ini  m1_input.ini  orbital_am.ini  spin_am.ini
lib/: CMakeLists.txt
old_c/: operator_gt.c  operators.h
programs/: chime.h  constants.h  module.mk  plot_integrand.py  relative-gen.cpp  relative_rme.cpp  relative_rme.h  relative_rme_test  relative_rme_test.cpp  relativecm-gen  relativecm-gen.cpp  relativecm_rme.cpp  relativecm_rme.h  relativecm_rme_test.cpp  tprme.h  utility.h  wigner_test.cpp
src/: .ccls  .dumbjump  CMakeLists.txt  charge_radius.cpp  charge_radius.h  chiral  chiral.cpp  chiral.h  constants.h  factory.h  gt.cpp  gt.h  integrals.h  io.h  io_new.h  m1.cpp  m1.h  m1_new.cpp  main.cpp  ndrel.cpp  op_file_io.cpp  op_file_io.h  operator_r_sq.c  operator_rc_sq.cpp  operator_rc_sq.h  operators.h  orbital_am.cpp  orbital_am.h  quadrature.h  rme_extended.h  rme_extras.h  specfunc.h  spin_am.cpp  spin_am.h  tdho.h  test.cpp  threedho.h  tprme.h  utility.h  wavefunction.cpp  (+1 more)
